--- a/README
+++ b/README
@@ -1,2 +1,1 @@
--- DE MENTIONAT CA EU PORNESC P * P THREADURI INSA DOAR P RULEAZA IN ACELASI TIMP LA NIVELUL 2 MS MULT PWP
--- DE REZOLVAT TREABA CU SEMAFORUL (VEZI SI MENTIUNEA DE SUS)
+Assignment for the 'Parallel and distributed algorithms' course. The PDF with the assignment can be found here as well.
